src/test/ui/issues/issue-75283.rs
extern "C" {
    fn lol() { //~ ERROR incorrect function inside `extern` block
        println!("");
    }
}
fn main() {}
